@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; 2008 Chris Gianelloni, Andrew Gaffney
 # Distributed under the GPL v2
 
+  17 Nov 2008; Andrew Gaffney <agaffney@gentoo.org> gen_initramfs.sh:
+  Break apart cryptsetup stuff into separate append_luks() and make
+  append_auxillary() dependent on ${BUSYBOX} for gentoo bug #247052
+
   15 Nov 2008; Andrew Gaffney <agaffney@gentoo.org> defaults/linuxrc:
   Applied patch for UUID support for real_resume= from gentoo bug #239687
 
